# ccr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml
.github/workflows/: ci.yml
assets/: demo.tape
assets/demo-fixtures/claude/api-service/: sess-a1b2c3d4e5f6.jsonl
assets/demo-fixtures/claude/docs-site/: sess-f5e6d7c8b9a0.jsonl
assets/demo-fixtures/codex/2026/05/23/: rollout-9988aabbcc.jsonl
assets/demo-fixtures/gemini/: projects.json
assets/demo-fixtures/gemini/tmp/cli-tool-x/chats/: session-7777.json
src/: age.rs  backends.rs  bookmarks.rs  main.rs  nicknames.rs  session.rs  tail.rs  trash.rs  tui.rs  util.rs
src/backends/: claude.rs  codex.rs  gemini.rs
tests/: resume_cli.rs
