[package]
name = "ccr"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "CLI Code Resume — unified TUI session picker for CLI coding assistants (Claude Code, oh-my-opencode, …)"
license = "MIT"
repository = "https://github.com/brevity1swos/ccr"
readme = "README.md"
keywords = ["claude", "cli", "tui", "session", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1"
dirs = "5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
