[package]
name = "ccr"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "CLI Code Resume — one TUI session picker across Claude Code, Codex, and Gemini CLI"
license = "MIT"
repository = "https://github.com/brevity1swos/ccr"
homepage = "https://github.com/brevity1swos/ccr"
documentation = "https://docs.rs/ccr"
readme = "README.md"
authors = ["brevity1swos <brevity1s.wos@gmail.com>"]
keywords = ["claude", "codex", "gemini", "tui", "ratatui"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
rayon = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
